get and set project, read config

--- a/goobi-plugin-workflow-projectexport/GUI/META-INF/resources/uii/plugin_workflow_projectexport.xhtml
+++ b/goobi-plugin-workflow-projectexport/GUI/META-INF/resources/uii/plugin_workflow_projectexport.xhtml
@@ -39,7 +39,7 @@
                                     <intranda:formInputDropDown
                                         id="project"
                                         label="#{msgs.projekt}"
-                                        field="#{NavigationForm.workflowPlugin.selectedProjectName}"
+                                        field="#{NavigationForm.workflowPlugin.projectName}"
                                         help=""
                                         name="project"
                                         selectItems="#{NavigationForm.workflowPlugin.allProjectNames}"
